@@ -2,32 +2,23 @@
  * This file was generated by the Gradle 'init' task.
  *
  * This generated file contains a sample Java application project to get you started.
- * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
- * User Manual available at https://docs.gradle.org/7.2/userguide/building_java_projects.html
  */
 
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
+    id 'java'
+    id 'org.openjfx.javafxplugin' version '0.0.11'
     id 'application'
     id 'distribution'
-    id "org.openjfx.javafxplugin" version "0.0.10"
-    
+    id 'org.beryx.jlink' version '2.24.2'    
 }
 
 repositories {
-    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
-
-    // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
-    
-    implementation group: 'org.controlsfx', name: 'controlsfx', version: '11.0.2'
-    
 }
 
 javafx{
@@ -35,22 +26,7 @@ javafx{
 }
 
 application {
-    // Define the main class for the application.
     mainClass = 'erb.App'
-}
-
-tasks.named('test') {
-    // Use JUnit Platform for unit tests.
-    useJUnitPlatform()
-}
-
-run {
-    applicationDefaultJvmArgs = ['--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls',
-                                                                '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls',
-    ]
-
-    jvmArgs = ['--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls',
-                                '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls',
-    ]
+    mainModule = 'erb'
 }
 
